--- a/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C59" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -26,16 +26,16 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView autoresizesSubviews="NO" wantsLayer="YES" id="5" userLabel="EditorView">
-            <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
+        <customView wantsLayer="YES" id="5" userLabel="EditorView">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <customView autoresizesSubviews="NO" id="6" customClass="SEEPlainTextEditorScrollView">
-                    <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
+                <customView id="6" customClass="SEEPlainTextEditorScrollView">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <customView id="y0Q-OD-MNN">
-                            <rect key="frame" x="0.0" y="174" width="163" height="96"/>
+                            <rect key="frame" x="0.0" y="284" width="163" height="96"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         </customView>
                     </subviews>
@@ -49,22 +49,22 @@
                     </userDefinedRuntimeAttributes>
                 </customView>
                 <customView id="27" userLabel="Top Blurred View" customClass="SEEOverlayView">
-                    <rect key="frame" x="0.0" y="273" width="409" height="17"/>
+                    <rect key="frame" x="0.0" y="383" width="600" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <box autoresizesSubviews="NO" verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="73">
-                            <rect key="frame" x="0.0" y="-2" width="409" height="5"/>
+                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="73">
+                            <rect key="frame" x="0.0" y="-2" width="600" height="5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                             <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" metaFont="system"/>
                         </box>
-                        <customView autoresizesSubviews="NO" id="61" customClass="PopUpButton">
-                            <rect key="frame" x="71" y="0.0" width="114" height="17"/>
+                        <customView id="61" customClass="PopUpButton">
+                            <rect key="frame" x="71" y="0.0" width="178" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         </customView>
                         <textField verticalHuggingPriority="750" id="25">
-                            <rect key="frame" x="210" y="-1" width="181" height="17"/>
+                            <rect key="frame" x="401" y="-1" width="181" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="&lt;written by ....>" id="91">
                                 <font key="font" metaFont="smallSystem"/>
@@ -90,7 +90,7 @@
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="WaitPipe" id="92"/>
                         </imageView>
                         <button id="cPs-Ka-upO">
-                            <rect key="frame" x="392" y="0.0" width="17" height="17"/>
+                            <rect key="frame" x="583" y="0.0" width="17" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EditorAddSplit" imagePosition="only" alignment="center" alternateImage="EditorRemoveSplit" transparent="YES" imageScaling="proportionallyDown" inset="2" id="wd5-GI-xyx">
                                 <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
@@ -119,34 +119,34 @@
                     </backgroundFilters>
                 </customView>
                 <customView id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
-                    <rect key="frame" x="0.0" y="0.0" width="409" height="17"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <box autoresizesSubviews="NO" verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="7">
-                            <rect key="frame" x="0.0" y="14" width="407" height="5"/>
+                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="7">
+                            <rect key="frame" x="0.0" y="14" width="598" height="5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                             <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" metaFont="system"/>
                         </box>
-                        <customView autoresizesSubviews="NO" toolTip="Document mode" id="75" customClass="PopUpButton">
+                        <customView toolTip="Document mode" id="75" customClass="PopUpButton">
                             <rect key="frame" x="-5" y="0.0" width="95" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
-                        <customView autoresizesSubviews="NO" toolTip="Tab settings" id="84" customClass="PopUpButton">
-                            <rect key="frame" x="87" y="0.0" width="76" height="17"/>
+                        <customView toolTip="Tab settings" id="84" customClass="PopUpButton">
+                            <rect key="frame" x="87" y="0.0" width="85" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
-                        <customView autoresizesSubviews="NO" toolTip="Line endings" id="81" customClass="PopUpButton">
-                            <rect key="frame" x="158" y="0.0" width="49" height="17"/>
+                        <customView toolTip="Line endings" id="81" customClass="PopUpButton">
+                            <rect key="frame" x="170" y="0.0" width="49" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
-                        <customView autoresizesSubviews="NO" toolTip="File encoding" id="77" customClass="PopUpButton">
-                            <rect key="frame" x="204" y="0.0" width="52" height="17"/>
+                        <customView toolTip="File encoding" id="77" customClass="PopUpButton">
+                            <rect key="frame" x="217" y="0.0" width="243" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </customView>
                         <button id="7Mi-Cu-bLB">
-                            <rect key="frame" x="256" y="0.0" width="21" height="17"/>
+                            <rect key="frame" x="459" y="0.0" width="21" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAnnounce_Inactive" imagePosition="only" alignment="center" alternateImage="BottomBarSharingIconAnnounce" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="4l5-Nu-6M1">
                                 <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
@@ -158,30 +158,35 @@
                             </connections>
                         </button>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Icy-2O-9Qz" userLabel="Participant Count Label">
-                            <rect key="frame" x="276" y="1" width="26" height="14"/>
+                            <rect key="frame" x="481" y="1" width="18" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="1" id="ak1-Tg-g3g">
+                            <textFieldCell key="cell" controlSize="small" sendsActionOnEndEditing="YES" alignment="right" title="1" id="ak1-Tg-g3g">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                             <connections>
+                                <binding destination="-2" name="hidden" keyPath="self.showsNumberOfActiveParticipants" id="vrO-w6-O41">
+                                    <dictionary key="options">
+                                        <string key="NSValueTransformerName">NSNegateBoolean</string>
+                                    </dictionary>
+                                </binding>
                                 <binding destination="-2" name="value" keyPath="self.numberOfActiveParticipants" id="MvO-Wx-x95"/>
                             </connections>
                         </textField>
                         <button id="OwG-YH-zbO">
-                            <rect key="frame" x="302" y="0.0" width="27" height="17"/>
+                            <rect key="frame" x="493" y="0.0" width="27" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconGroup" imagePosition="only" alignment="center" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="tKL-KY-Fjg">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                                <font key="font" metaFont="miniSystem"/>
+                                <font key="font" metaFont="smallSystem"/>
                             </buttonCell>
                             <connections>
                                 <action selector="toggleParticipantsOverlay:" target="-1" id="YXe-qQ-ERB"/>
                             </connections>
                         </button>
                         <button id="bv6-mv-CIq">
-                            <rect key="frame" x="332" y="0.0" width="26" height="17"/>
+                            <rect key="frame" x="523" y="0.0" width="26" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAdd" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="HOp-Np-jFU">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -192,9 +197,9 @@
                             </connections>
                         </button>
                         <textField toolTip="Window width and wrap settings" verticalHuggingPriority="750" id="15" customClass="BorderedTextField">
-                            <rect key="frame" x="359" y="0.0" width="40" height="16"/>
+                            <rect key="frame" x="550" y="0.0" width="40" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="999w" id="93">
+                            <textFieldCell key="cell" controlSize="small" sendsActionOnEndEditing="YES" alignment="right" title="999w" id="93">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
