--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C59" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -25,16 +25,16 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView autoresizesSubviews="NO" wantsLayer="YES" id="5" userLabel="EditorView">
-            <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
+        <customView wantsLayer="YES" id="5" userLabel="EditorView">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <customView autoresizesSubviews="NO" id="6" customClass="SEEPlainTextEditorScrollView">
-                    <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
+                <customView id="6" customClass="SEEPlainTextEditorScrollView">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <customView id="A2n-hn-i1e">
-                            <rect key="frame" x="0.0" y="194" width="163" height="96"/>
+                            <rect key="frame" x="0.0" y="304" width="163" height="96"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         </customView>
                     </subviews>
@@ -47,23 +47,23 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </customView>
-                <customView autoresizesSubviews="NO" id="27" userLabel="Top Blurred View" customClass="SEEOverlayView">
-                    <rect key="frame" x="0.0" y="273" width="409" height="17"/>
+                <customView id="27" userLabel="Top Blurred View" customClass="SEEOverlayView">
+                    <rect key="frame" x="0.0" y="383" width="600" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <box autoresizesSubviews="NO" verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="73">
-                            <rect key="frame" x="0.0" y="-2" width="409" height="5"/>
+                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="73">
+                            <rect key="frame" x="0.0" y="-2" width="600" height="5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                             <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" metaFont="system"/>
                         </box>
-                        <customView autoresizesSubviews="NO" id="61" customClass="PopUpButton">
-                            <rect key="frame" x="71" y="0.0" width="114" height="17"/>
+                        <customView id="61" customClass="PopUpButton">
+                            <rect key="frame" x="71" y="0.0" width="178" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                         </customView>
                         <textField verticalHuggingPriority="750" id="25">
-                            <rect key="frame" x="210" y="-1" width="181" height="17"/>
+                            <rect key="frame" x="401" y="-1" width="181" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="&lt;Geschrieben von ...>" id="91">
                                 <font key="font" metaFont="smallSystem"/>
@@ -84,7 +84,7 @@
                             </connections>
                         </textField>
                         <button id="Vf8-MP-UD0">
-                            <rect key="frame" x="392" y="0.0" width="17" height="17"/>
+                            <rect key="frame" x="583" y="0.0" width="17" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="EditorAddSplit" imagePosition="only" alignment="center" alternateImage="EditorRemoveSplit" transparent="YES" imageScaling="proportionallyDown" inset="2" id="DlZ-2M-ymd">
                                 <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
@@ -114,35 +114,35 @@
                         </ciFilter>
                     </backgroundFilters>
                 </customView>
-                <customView autoresizesSubviews="NO" id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
-                    <rect key="frame" x="0.0" y="0.0" width="409" height="17"/>
+                <customView id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <box autoresizesSubviews="NO" verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="7">
-                            <rect key="frame" x="0.0" y="14" width="409" height="5"/>
+                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="7">
+                            <rect key="frame" x="0.0" y="14" width="600" height="5"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                             <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" metaFont="system"/>
                         </box>
-                        <customView autoresizesSubviews="NO" toolTip="Dokument-Modus" id="75" customClass="PopUpButton">
+                        <customView toolTip="Dokument-Modus" id="75" customClass="PopUpButton">
                             <rect key="frame" x="-5" y="0.0" width="95" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
-                        <customView autoresizesSubviews="NO" toolTip="Tabulator-Einstellung" id="84" customClass="PopUpButton">
-                            <rect key="frame" x="87" y="0.0" width="76" height="17"/>
+                        <customView toolTip="Tabulator-Einstellung" id="84" customClass="PopUpButton">
+                            <rect key="frame" x="87" y="0.0" width="85" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
-                        <customView autoresizesSubviews="NO" toolTip="Zeilenenden" id="81" customClass="PopUpButton">
-                            <rect key="frame" x="158" y="0.0" width="49" height="17"/>
+                        <customView toolTip="Zeilenenden" id="81" customClass="PopUpButton">
+                            <rect key="frame" x="170" y="0.0" width="49" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
-                        <customView autoresizesSubviews="NO" toolTip="Datei-Codierung" id="77" customClass="PopUpButton">
-                            <rect key="frame" x="204" y="0.0" width="52" height="17"/>
+                        <customView toolTip="Datei-Codierung" id="77" customClass="PopUpButton">
+                            <rect key="frame" x="217" y="0.0" width="243" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </customView>
                         <button id="vfj-iQ-rwb">
-                            <rect key="frame" x="256" y="0.0" width="21" height="17"/>
+                            <rect key="frame" x="459" y="0.0" width="21" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAnnounce_Inactive" imagePosition="only" alignment="center" alternateImage="BottomBarSharingIconAnnounce" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="EuY-O1-ng9">
                                 <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
@@ -154,19 +154,24 @@
                             </connections>
                         </button>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Bxr-vi-sJO" userLabel="Participant Count Label">
-                            <rect key="frame" x="277" y="1" width="26" height="14"/>
+                            <rect key="frame" x="481" y="1" width="18" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="1" id="573-DP-OWo">
+                            <textFieldCell key="cell" controlSize="small" sendsActionOnEndEditing="YES" alignment="right" title="1" id="573-DP-OWo">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                             <connections>
+                                <binding destination="-2" name="hidden" keyPath="self.showsNumberOfActiveParticipants" id="uIi-xh-191">
+                                    <dictionary key="options">
+                                        <string key="NSValueTransformerName">NSNegateBoolean</string>
+                                    </dictionary>
+                                </binding>
                                 <binding destination="-2" name="value" keyPath="self.numberOfActiveParticipants" id="dl3-Du-8Gx"/>
                             </connections>
                         </textField>
                         <button id="cAx-05-r3z">
-                            <rect key="frame" x="302" y="0.0" width="27" height="17"/>
+                            <rect key="frame" x="493" y="0.0" width="27" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconGroup" imagePosition="only" alignment="center" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="5vb-nB-sgY">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -177,7 +182,7 @@
                             </connections>
                         </button>
                         <button id="SB3-zK-zNn">
-                            <rect key="frame" x="328" y="0.0" width="26" height="17"/>
+                            <rect key="frame" x="523" y="0.0" width="26" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAdd" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="fEi-Tl-UsW">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -188,9 +193,9 @@
                             </connections>
                         </button>
                         <textField toolTip="Fensterbreite und Tabulator-Einstellung" verticalHuggingPriority="750" id="15" customClass="BorderedTextField">
-                            <rect key="frame" x="359" y="0.0" width="40" height="16"/>
+                            <rect key="frame" x="550" y="0.0" width="40" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="999w" id="93">
+                            <textFieldCell key="cell" controlSize="small" sendsActionOnEndEditing="YES" alignment="right" title="999w" id="93">
                                 <font key="font" metaFont="smallSystem"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
