--- a/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C59" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -154,6 +154,7 @@
                             </buttonCell>
                             <connections>
                                 <action selector="toggleIsAnnounced:" target="-1" id="IJN-40-Y5s"/>
+                                <binding destination="-2" name="alternateImage" keyPath="self.alternateAnnounceImage" id="9C3-Qh-Q6v"/>
                                 <outlet property="menu" destination="eH3-RU-uKl" id="H3t-Aa-F1C"/>
                             </connections>
                         </button>
@@ -166,12 +167,12 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                             <connections>
+                                <binding destination="-2" name="value" keyPath="self.numberOfActiveParticipants" id="MvO-Wx-x95"/>
                                 <binding destination="-2" name="hidden" keyPath="self.showsNumberOfActiveParticipants" id="vrO-w6-O41">
                                     <dictionary key="options">
                                         <string key="NSValueTransformerName">NSNegateBoolean</string>
                                     </dictionary>
                                 </binding>
-                                <binding destination="-2" name="value" keyPath="self.numberOfActiveParticipants" id="MvO-Wx-x95"/>
                             </connections>
                         </textField>
                         <button id="OwG-YH-zbO">
