--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C59" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -150,6 +150,7 @@
                             </buttonCell>
                             <connections>
                                 <action selector="toggleIsAnnounced:" target="-1" id="dJy-9I-9EC"/>
+                                <binding destination="-2" name="alternateImage" keyPath="self.alternateAnnounceImage" id="w7t-yq-6Qh"/>
                                 <outlet property="menu" destination="vSJ-Jc-3sH" id="o2Y-0X-qCr"/>
                             </connections>
                         </button>
@@ -162,12 +163,12 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                             <connections>
+                                <binding destination="-2" name="value" keyPath="self.numberOfActiveParticipants" id="dl3-Du-8Gx"/>
                                 <binding destination="-2" name="hidden" keyPath="self.showsNumberOfActiveParticipants" id="uIi-xh-191">
                                     <dictionary key="options">
                                         <string key="NSValueTransformerName">NSNegateBoolean</string>
                                     </dictionary>
                                 </binding>
-                                <binding destination="-2" name="value" keyPath="self.numberOfActiveParticipants" id="dl3-Du-8Gx"/>
                             </connections>
                         </textField>
                         <button id="cAx-05-r3z">
