--- a/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C59" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -21,6 +21,7 @@
                 <outlet property="O_waitPipeStatusImageView" destination="68" id="69"/>
                 <outlet property="O_windowWidthTextField" destination="15" id="21"/>
                 <outlet property="O_writtenByTextField" destination="25" id="31"/>
+                <outlet property="shareAnnounceButtonOutlet" destination="7Mi-Cu-bLB" id="XN5-mI-pJm"/>
                 <outlet property="shareInviteUsersButtonOutlet" destination="bv6-mv-CIq" id="hQV-kB-VvW"/>
             </connections>
         </customObject>
@@ -118,7 +119,7 @@
                         </ciFilter>
                     </backgroundFilters>
                 </customView>
-                <customView id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
+                <customView wantsLayer="YES" id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -145,7 +146,7 @@
                             <rect key="frame" x="217" y="0.0" width="243" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </customView>
-                        <button id="7Mi-Cu-bLB">
+                        <button wantsLayer="YES" id="7Mi-Cu-bLB">
                             <rect key="frame" x="459" y="0.0" width="21" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="BottomBarSharingIconAnnounce_Inactive" imagePosition="only" alignment="center" alternateImage="BottomBarSharingIconAnnounce" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="4l5-Nu-6M1">
